--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-local"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-development"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources-production"/>
         <property name="context-root" value="hotplace_admin"/>
         <property name="java-output-path" value="/hotplace_admin/target/classes"/>
     </wb-module>
