--- a/src/main/resources/META-INF/resources/css/icon.css
+++ b/src/main/resources/META-INF/resources/css/icon.css
@@ -7,3 +7,4 @@
 .tree-expand {background-image : url(../images/tree_expand.gif) !important;}
 .tree-collapse {background-image : url(../images/tree_collapse.gif) !important;}
 .reg {background-image : url(../images/text_edit.gif) !important;}
+.icon-logout {background-image: url(../images/logout.png) !important; background-size: 16px 16px;}
