--- a/src/main/resources/META-INF/resources/css/default.css
+++ b/src/main/resources/META-INF/resources/css/default.css
@@ -70,3 +70,4 @@
 #idConfValue-inputEl.x-form-text {height: 22px;}
 /*설정리스트 설정값 combo*/
 #user-auth-grade-combo-inputEl.x-form-text {height: 22px;}
+#dateLogSearch-inputEl.x-form-text {height: 22px;}
