--- a/src/main/resources/META-INF/resources/css/icon.css
+++ b/src/main/resources/META-INF/resources/css/icon.css
@@ -4,6 +4,8 @@
 .icon-modi {background-image : url(../images/modify.gif) !important;}
 .icon-user {background-image : url(../images/icon_user.gif) !important;}
 .icon-window {background-image : url(../images/new_window.gif) !important;}
+.icon-close {background-image : url(../images/auctDone.gif) !important;}
+.icon-refresh {background-image : url(../images/refresh.png) !important;}
 .tree-expand {background-image : url(../images/tree_expand.gif) !important;}
 .tree-collapse {background-image : url(../images/tree_collapse.gif) !important;}
 .reg {background-image : url(../images/text_edit.gif) !important;}
