--- a/src/main/resources/META-INF/resources/css/default.css
+++ b/src/main/resources/META-INF/resources/css/default.css
@@ -71,3 +71,4 @@
 /*설정리스트 설정값 combo*/
 #user-auth-grade-combo-inputEl.x-form-text {height: 22px;}
 #dateLogSearch-inputEl.x-form-text {height: 22px;}
+#yaggwan-soonseo-combo-inputEl.x-form-text {height: 22px;}
