--- a/src/main/resources/META-INF/resources/css/default.css
+++ b/src/main/resources/META-INF/resources/css/default.css
@@ -72,3 +72,7 @@
 #user-auth-grade-combo-inputEl.x-form-text {height: 22px;}
 #dateLogSearch-inputEl.x-form-text {height: 22px;}
 #yaggwan-soonseo-combo-inputEl.x-form-text {height: 22px;}
+
+
+
+.spUser {color:#ff0000; font-weight:bolder;}
