--- a/src/main/resources/META-INF/resources/css/default.css
+++ b/src/main/resources/META-INF/resources/css/default.css
@@ -73,6 +73,8 @@
 #dateLogSearch-inputEl.x-form-text {height: 22px;}
 #yaggwan-soonseo-combo-inputEl.x-form-text {height: 22px;}
 
+#qna-process-combo-inputEl.x-form-text {height: 22px;}
+
 
 
 .spUser {color:#ff0000; font-weight:bolder;}
