--- a/src/main/resources/META-INF/resources/css/default.css
+++ b/src/main/resources/META-INF/resources/css/default.css
@@ -82,7 +82,7 @@
 #qna-process-combo-inputEl.x-form-text {height: 22px;}
 
 /*결제내역*/
-#paymentDate-inputEl.x-form-text {height: 22px;}
+#paymentDateWin-inputEl.x-form-text {height: 22px;}
 
 
 .spUser {color:#ff0000; font-weight:bolder;}
