--- a/src/main/resources/META-INF/resources/css/default.css
+++ b/src/main/resources/META-INF/resources/css/default.css
@@ -91,4 +91,7 @@
 input[id*='each-ROLE_'].x-form-text {height: 22px;}
 #user-all-expire-inputEl.x-form-text {height: 22px;}
 
+/*결제수동처리*/
+#fm-payment-body input[type=text] {height: 22px;}
+
 
